--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: certetemplate
-Title: A Certe R Package for ...
+Package: certegis
+Title: A Certe R Package for Geographic Information Science
 Version: 0.0.1
 Authors@R: c(
   person(given = c("Matthijs", "S."), 
@@ -10,18 +10,20 @@ Authors@R: c(
          family = "Hassing", 
          role = c("aut"),
          email = "e.hassing@certe.nl"),
-  person(given = c("Erwin"),
-         family = "Dijkstra", 
-         role = c("aut"),
-         email = "e.dijkstra@certe.nl"),
   person(given = "Certe Medical Diagnostics & Advice Foundation",
          role = c("cph", "fnd")))
-Description: A Certe R Package for ... .
+Description: A Certe R package for geographic information science (GIS),
+  using the 'sf' package and Dutch reference data.
   This package is part of the 'certedata' universe.
-URL: https://certe-medical-epidemiology.github.io/certetemplate, https://github.com/certe-medical-epidemiology/certetemplate
+URL: https://certe-medical-epidemiology.github.io/certegis, https://github.com/certe-medical-epidemiology/certegis
 Depends: 
   R (>= 3.6.0)
+Imports:
+  certestyle,
+  dplyr (>= 1.0.5),
+  yaml (>= 2.2.0)
 Suggests: 
+  sf (>= 0.9.5),
   testthat (>= 2.0.0)
 License: GPL-2
 Encoding: UTF-8
