--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: certegis
 Title: A Certe R Package for Geographic Information Science
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: c(
   person(given = c("Matthijs", "S."), 
          family = "Berends",
@@ -23,11 +23,13 @@ Imports:
   dplyr (>= 1.0.5),
   yaml (>= 2.2.0)
 Suggests: 
+  certeplot2,
   sf (>= 0.9.5),
   testthat (>= 2.0.0)
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
+LazyDataCompression: bzip2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Config/testthat/edition: 2
