--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -59,7 +59,14 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
     steps:
       - uses: actions/checkout@v2
-
+      
+      - name: Install gdal on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew install gdal
+          brew link --overwrite gcc
+        shell: bash
+        
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
