GitHub Actions support for macOS

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -63,6 +63,7 @@ jobs:
       - name: Install gdal on macOS
         if: runner.os == 'macOS'
         run: |
+          brew install proj
           brew install gdal
           brew link --overwrite gcc
         shell: bash
