--- a/.github/workflows/lintr.yaml
+++ b/.github/workflows/lintr.yaml
@@ -32,6 +32,14 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Install gdal on macOS
+        if: runner.os == 'macOS'
+        run: |
+          brew install proj
+          brew install gdal
+          brew link --overwrite gcc
+        shell: bash
 
       - uses: r-lib/actions/setup-r@v1
         with:
