--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Imports:
   yaml (>= 2.2.0)
 Suggests: 
   certeplot2,
+  jsonlite (>= 1.7.1),
   sf (>= 0.9.5),
   testthat (>= 2.0.0)
 License: GPL-2
