--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(cases_within_radius)
 export(crop_certe)
 export(filter_geolocation)
 export(filter_sf)
+export(get_addresses)
+export(get_coordinates)
 export(get_map)
 export(is.sf)
 export(latitude)
