--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: certegis
 Title: A Certe R Package for Geographic Information Science
-Version: 1.1.0
+Version: 1.2.0
 Authors@R: c(
   person(given = c("Matthijs", "S."), 
          family = "Berends",
@@ -23,6 +23,7 @@ Imports:
   yaml (>= 2.2.0)
 Suggests: 
   certeplot2,
+  jsonlite (>= 1.7.1),
   sf (>= 0.9.5),
   testthat (>= 2.0.0)
 License: GPL-2
