--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,12 @@ export(cases_within_radius)
 export(crop_certe)
 export(filter_geolocation)
 export(filter_sf)
-export(get_addresses)
-export(get_coordinates)
+export(geocode)
 export(get_map)
 export(is.sf)
 export(latitude)
 export(longitude)
+export(reverse_geocode)
 importFrom(dplyr,`%>%`)
 importFrom(dplyr,across)
 importFrom(dplyr,bind_rows)
