--- a/.github/workflows/lintr.yaml
+++ b/.github/workflows/lintr.yaml
@@ -27,27 +27,19 @@ name: lintr
 
 jobs:
   lintr:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
-      
-      - name: Install gdal on macOS
-        if: runner.os == 'macOS'
-        run: |
-          brew install proj
-          brew install gdal
-          brew link --overwrite gcc
-        shell: bash
 
-      - uses: r-lib/actions/setup-r@v1
+      - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
           # be sure to enable our R-universe
           extra-repositories: 'https://certe-medical-epidemiology.r-universe.dev'
 
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: lintr
 
