support for groups in cases_within_radius()

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,8 +22,7 @@
 
 on:
   push:
-    branches: '**' # matches every branch
-  pull_request:
+    branches: '**' # matches every branch  pull_request:
     branches: '**' # matches every branch
   schedule:
     # run a schedule every day at 1 AM.
