--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,57 +32,4 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    runs-on: ${{ matrix.config.os }}
-    continue-on-error: ${{ matrix.config.allowfail }}
-    name: ${{ matrix.config.os }} (R-${{ matrix.config.r }})
-    strategy:
-      fail-fast: false
-      matrix:
-        config:
-          - {os: ubuntu-20.04,   r: 'devel',   allowfail: true}
-          - {os: ubuntu-20.04,   r: '4.2',     allowfail: false}
-          - {os: macOS-latest,   r: '4.2',     allowfail: false}
-          - {os: windows-latest, r: '4.2',     allowfail: false}
-
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install gdal on macOS
-        if: runner.os == 'macOS'
-        run: |
-          brew install proj
-          brew install gdal
-          brew link --overwrite gcc
-        shell: bash
-
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          use-public-rspm: true
-          # be sure to enable our R-universe
-          extra-repositories: 'https://certe-medical-epidemiology.r-universe.dev'
-
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: rcmdcheck
-
-      - uses: r-lib/actions/check-r-package@v2
-
-      - name: Show testthat output
-        if: always()
-        run: find check -name 'testthat.Rout*' -exec cat '{}' \; || true
-        shell: bash
-
-      - name: Upload check results
-        if: failure()
-        uses: actions/upload-artifact@main
-        with:
-          name: ${{ runner.os }}-r${{ matrix.config.r }}-results
-          path: check
-          retention-days: 7
+    uses: certe-medical-epidemiology/template/.github/workflows/reusable-workflow.yml@main
