--- a/.github/workflows/workflow-schedule.yml
+++ b/.github/workflows/workflow-schedule.yml
@@ -17,32 +17,25 @@
 #  useful, but it comes WITHOUT ANY WARRANTY OR LIABILITY.              #
 # ===================================================================== #
 
+# Remember that R-universe will hourly build binaries for macOS and Windows:
+# https://certe-medical-epidemiology.r-universe.dev
+
 on:
   push:
-    branches: '**' # matches every branch
-  pull_request:
-    branches: '**' # matches every branch
-
-name: lintr
+     # run after a git push on any branch in this repo
+    branches: '**'
+  schedule:
+    # run additionally a schedule every day at 1 AM.
+    # this is to check that all dependencies are still available
+    - cron:  '0 1 * * *'
 
 jobs:
+  R-CMD-check:
+    uses: certe-medical-epidemiology/template/.github/workflows/reusable-workflow-R-CMD-check.yml@main
+    secrets: inherit
+  Codecov:
+    uses: certe-medical-epidemiology/template/.github/workflows/reusable-workflow-codecov.yml@main
+    secrets: inherit
   lintr:
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          use-public-rspm: true
-          # be sure to enable our R-universe
-          extra-repositories: 'https://certe-medical-epidemiology.r-universe.dev'
-
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: lintr
-
-      - name: Lint
-        run: lintr::lint_package(linters = lintr::with_defaults(line_length_linter = NULL, trailing_whitespace_linter = NULL, object_name_linter = NULL, cyclocomp_linter = NULL, object_length_linter = lintr::object_length_linter(length = 50L)))
-        shell: Rscript {0}
+    uses: certe-medical-epidemiology/template/.github/workflows/reusable-workflow-lintr.yml@main
+    secrets: inherit
