--- a/.github/workflows/workflow-only-push-main.yaml
+++ b/.github/workflows/workflow-only-push-main.yaml
@@ -23,6 +23,6 @@ on:
     branches: 'main' 
 
 jobs:
-  R-CMD-check:
+  website:
     uses: certe-medical-epidemiology/template/.github/workflows/reusable-workflow-website.yml@main
     secrets: inherit
