--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: certegis
 Title: A Certe R Package for Geographic Information Science
-Version: 1.3.6
+Version: 1.3.7
 Authors@R: c(
   person(given = c("Matthijs", "S."), 
          family = "Berends",
@@ -23,6 +23,7 @@ Imports:
   yaml (>= 2.2.0)
 Suggests: 
   certeplot2,
+  httr (>= 1.4.0),
   jsonlite (>= 1.7.1),
   sf (>= 0.9.5),
   testthat (>= 2.0.0)
@@ -31,5 +32,5 @@ Encoding: UTF-8
 LazyData: true
 LazyDataCompression: bzip2
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.3
 Config/testthat/edition: 2
