--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(add_map)
 export(as.sf)
 export(cases_within_radius)
+export(convert_to_degrees_CRS4326)
+export(convert_to_metre_CRS28992)
 export(crop_certe)
+export(degrees_to_sf)
 export(filter_geolocation)
 export(filter_sf)
 export(geocode)
