crop_certe to include NOP, fixed geocoding

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(latitude)
 export(longitude)
 export(reverse_geocode)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
